# MeeTeleGram

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  MeeTeleGram.pro  MeeTeleGram_harmattan.desktop  README.md  TelegramWindow.cpp  TelegramWindow.h  TelegramWindow.ui  interface.c  interface.h  loop.c  main.c  main.cpp  meetelegram.pro  qtconnection.cpp  qtelegram.cpp  qtelegram.h  qttimer.cpp  qtupdate.cpp  updateqm.pri
debian/: README  changelog  control  copyright  rules
images/: MeeTeleGram.xcf  splash.xcf
l10n/: MeeTeleGram.fa.ts
qml/MeeTeleGram/: Chat.qml  CodeRequest.qml  Contacts.qml  ContactsModel.qml  Dialogs.qml  DialogsModel.qml  FastScroll.js  FastScroll.qml  MainPage.qml  MessagesModel.qml  MySectionScroller.qml  MySectionScrollerLabel.qml  Register.qml  meetelegram.qml
qml/MeeTeleGram_PC/: meetelegram.qml
qmlapplicationviewer/: qmlapplicationviewer.pri
src/: Makefile  contact.cpp  contact.h  contacts_model.cpp  contacts_model.h  main.cpp  qpeerid.cpp  qpeerid.h  qtconnection.cpp  qtelegram.cpp  qtelegram.h  qttimer.cpp  qtupdate.cpp  src.pri
